Fixed spacing issue

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -98,7 +98,6 @@
 
 .tile p {
   text-align: left;
-  margin-top: -2px;
   margin-bottom: -4px;
   color: white;
 }
